bundle/tests/scorecard/kuttl/network-policy/04-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 60
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-rc
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: network-policy-rc
      ports:
        - port: 8081
          protocol: TCP
  podSelector:
    matchLabels:
      rc.app.stacks/name: network-policy-rc
  policyTypes:
    - Ingress
